fixing too long text lines…

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -36,4 +36,5 @@ h2.room {
 
 .content {
 	overflow:auto;
+	max-width: 900px;
 }
